# counterweight

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CNAME  LICENSE  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  synth.yaml
.claude/skills/cw-profile/: SKILL.md
.claude/skills/cw-profile/scripts/: analyze_devlog.py  analyze_scalene.py
.github/: dependabot.yml
.github/workflows/: publish-docs.yml  publish-package.yml  quality-check.yml
_examples/: border_healing.py  box_model.py  relative_positioning.py
changelog/: index.html
codegen/: colors.py  generate_utilities.py
components/: index.html
cookbook/border-healing/: index.html
cookbook/border-titles/: index.html
cookbook/layout-problems/: index.html
counterweight/: __init__.py  _context_vars.py  _utils.py  app.py  border_healing.py  cell_paint.py  cli.py  components.py  constants.py  control.py  controls.py  elements.py  errors.py  events.py  geometry.py  input.py  keys.py  layout.py  logging.py  output.py  paint.py  shadow.py  types.py
counterweight/hooks/: __init__.py  hooks.py  impls.py  types.py
counterweight/styles/: __init__.py  styles.py  utilities.py
docs/: api-reference.md  app-flow.md  changelog.md  index.md  utilities.md
docs/_examples/: absolute_positioning.py  absolute_positioning_insets.py  border_titles.py  box_model.py  fixed_positioning.py  relative_positioning.py  z.py
docs/assets/: style.css
docs/components/: div.md  index.md  text.md
docs/cookbook/: border-healing.md  border-titles.md  layout-problems.md
docs/elements/: div.md  text.md
docs/examples/: absolute_positioning.py  absolute_positioning_insets.py  border_healing.py  border_titles.py  box_model.py  generate-screenshots.sh  relative_positioning.py  z.py
docs/hooks/: index.md  use_effect.md  use_hovered.md  use_mouse.md  use_rects.md  use_ref.md  use_state.md
docs/input-handling/: controls.md  events.md  index.md
docs/reference/: api.md  changelog.md
docs/styles/: color.md  index.md  layout.md  text-wrapping.md  utilities.md
docs/under-the-hood/: data-flow.md  index.md
elements/: index.html
elements/div/: index.html
elements/text/: index.html
examples/: absolute_positioning.py  absolute_positioning_insets.py  border_healing.py  border_join.py  borders.py  box_model.py  canvas.py  chess.py  end_to_end.py  example.py  file_viewer.py  fixed_positioning.py  flex.py  gradients.py  inline.py  justify_and_align.py  justify_and_align_flex.py  layout.py  less.py  mouse.py  parser.py  reconcile.py  relative_positioning.py  scrolling.py  stopwatch.py  suspend.py  table.py  text_wrap.py  top.py  wordle.py  z.py
hooks/: index.html
hooks/use_effect/: index.html
hooks/use_hovered/: index.html
hooks/use_mouse/: index.html
hooks/use_rects/: index.html
hooks/use_ref/: index.html
hooks/use_state/: index.html
input-handling/: index.html
input-handling/controls/: index.html
input-handling/events/: index.html
plans/: component-memoization.md  performance-analysis-2026-03-07.md  performance-analysis.md  scrolling-support.md  text-wrapping.md  waxy-layout-integration.md
profiling/: canvas.py  dashboard.py
reference/api/: index.html
reference/changelog/: index.html
reprisal/: __main__.py  _context_vars.py  _utils.py  app.py  cell_paint.py  cli.py  components.py  compositor.py  constants.py  context_vars.py  control.py  driver.py  elements.py  events.py  geometry.py  hooks.py  input.py  keys.py  layout.py  logging.py  output.py  paint.py  shadow.py  types.py  utils.py  vtparser.py
reprisal/components/: __init__.py  components.py
reprisal/elements/: __init__.py  elements.py
reprisal/hooks/: __init__.py  anchors.py  hooks.py  impls.py  types.py
reprisal/render/: __init__.py  hooks.py  roots.py  types.py
reprisal/styles/: __init__.py  merge.py  styles.py  types.py  utilities.py
search/: search_index.json
src/counterweight/: __main__.py  _utils.py  app.py  border_healing.py  cli.py  controls.py  elements.py  events.py  geometry.py  input.py  keys.py  layout.py  logging.py  output.py  paint.py  shadow.py  utils.py
src/counterweight/hooks/: __init__.py  hooks.py  impls.py  types.py
src/counterweight/styles/: __init__.py  styles.py  utilities.py
styles/: index.html
styles/layout/: index.html
styles/text-wrapping/: index.html
styles/utilities/: index.html
tests/: conftest.py  test_app.py  test_border_healing.py  test_cell_paint.py  test_layout.py  test_paint_tracking.py  test_scrolling.py  test_vt_parsing.py  test_wrap_cells.py
tests/cli/: test_help.py  test_version.py
tests/controls/: test_screenshot.py
tests/elements/: test_text.py
tests/hooks/: test_use_context.py  test_use_effect.py  test_use_reducer.py  test_use_ref.py  test_use_state.py
tests/inputs/: test_on_key.py  test_on_mouse.py
tests/output/: test_move_to.py  test_paint_to_instructions.py  test_sgr_from_cell_style.py
tests/styles/: test_merging.py  test_utilities.py
tests/utils/: test_cancel.py  test_clamp.py  test_diff.py  test_drain_queue.py  test_flyweight.py  test_forever.py  test_halve_integer.py  test_maybe_await.py  test_partition_int.py  test_unordered_range.py  test_wrap_text.py
tests/vtparser/: test_transitions.py
under-the-hood/: index.html
utilities/: index.html
