[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "counterweight"
version = "0.0.9"
description = "An experimental TUI framework for Python, inspired by React and Tailwind"
readme = "README.md"
license = "MIT"
authors = [
    { name = "JoshKarpel", email = "josh.karpel@gmail.com" }
]
keywords = [
    "tui",
    "terminal",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "pydantic>=2",
    "structlog>=23.1",
    "parsy>=2.1",
    "more-itertools>=9.1",
    "cachetools>=5.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4",
    "black==24.3.0",
    "watchfiles>=0.19",
    "pytest<8",
    "pytest-cov>=3",
    "pytest-xdist>=3",
    "pytest-asyncio>=0.20",
    "pytest-mock>=3",
    "hypothesis>=6.80",
    "mypy>=1",
    "types-cachetools>=5.3",
    "mkdocs>=1.4",
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.19.0",
    "line-profiler>=4.1",
    "austin-dist>=3.6",
    "austin-python>=1.7",
]

[project.scripts]
counterweight = "counterweight.cli:cli"

[project.urls]
Homepage = "https://github.com/JoshKarpel/counterweight"
Repository = "https://github.com/JoshKarpel/counterweight"
Documentation = "https://www.counterweight.dev"
"Bug Tracker" = "https://github.com/JoshKarpel/counterweight/issues"

[tool.pytest.ini_options]
addopts = ["--strict-markers", "-Werror"]
testpaths = ["tests", "src/counterweight", "docs"]

markers = ["slow"]

asyncio_mode = "auto"

[tool.mypy]
pretty = true
show_error_codes = true

files = ["."]

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true

warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_redundant_casts = true

ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I",   # https://beta.ruff.rs/docs/rules/#isort-i
    "F",   # https://beta.ruff.rs/docs/rules/#pyflakes-f
    "E",   # https://beta.ruff.rs/docs/rules/#error-e
    "W",   # https://beta.ruff.rs/docs/rules/#warning-w
    "T20", # https://beta.ruff.rs/docs/rules/#flake8-print-t20
    "PIE", # https://beta.ruff.rs/docs/rules/#flake8-pie-pie
    "PLC", # https://beta.ruff.rs/docs/rules/#convention-plc
    "PLE", # https://beta.ruff.rs/docs/rules/#error-ple
    "PLW", # https://beta.ruff.rs/docs/rules/#warning-plw
    "PTH", # https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
    "PGH", # https://beta.ruff.rs/docs/rules/#pygrep-hooks-pgh
    "RUF", # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
]

ignore = [
    "E501",  # line length exceeds limit
    "E741",  # ambiguous variable name
    "T201",  # print
    "T203",  # pprint
    "F403",  # star imports, used for utilities
    "F405",  # star imports, used for utilities
]
